--- a/mostrar_datos.html
+++ b/mostrar_datos.html
@@ -174,6 +174,24 @@
           }
         }
       }
+         function cargarDatos() {
+        for (let i = 1; i <= 11; i++) {
+            for (let j = 1; j <= 11; j++) {
+                const cellId = 'cell' + i + j;
+                const cellContent = localStorage.getItem(cellId);
+                document.getElementById(cellId).textContent = cellContent;
+                
+                // Cambiar el color del texto en celdas específicas
+                if (cellContent === "Descanso") {
+                    document.getElementById(cellId).style.color = "blue";
+                } else if (cellContent === "Pendiente Asignacion") {
+                    document.getElementById(cellId).style.color = "red";
+                } else if (cellContent === "Tecnico"||cellContent ==="Cliente") {
+                    document.getElementById(cellId).style.color = "green";
+                }
+            }
+        }
+    }
     </script>
   
 </body>
